Fixed Bug #42229 (fgetcsv() behaves differently for a file containing '\n' with php5 and php6)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@252603 c90b9560-bf6c-de11-be94-00142212c4b1